# exercism-exercises

./: .gitignore
cpp/allergies/: allergies.cpp  (+2 more)
python/: pyproject.toml
python/armstrong-numbers/: armstrong_numbers.py
python/armstrong-numbers/.exercism/: metadata.json
python/black-jack/: black_jack.py  black_jack_test.py
python/black-jack/.exercism/: metadata.json
python/bob/: bob.py
python/bob/.exercism/: metadata.json
python/card-games/: lists.py
python/card-games/.exercism/: metadata.json
python/cater-waiter/: sets.py
python/cater-waiter/.exercism/: metadata.json
python/chaitanas-colossal-coaster/: list_methods.py
python/chaitanas-colossal-coaster/.exercism/: metadata.json
python/collatz-conjecture/: collatz_conjecture.py
python/collatz-conjecture/.exercism/: metadata.json
python/currency-exchange/: exchange.py
python/darts/: darts.py
python/ellens-alien-game/: classes.py
python/grains/: grains.py
python/guidos-gorgeous-lasagna/: lasagna.py
python/hello-world/: hello_world.py
python/inventory-management/: dicts.py
python/leap/: leap.py
python/little-sisters-essay/: string_methods.py
python/little-sisters-vocab/: strings.py
python/locomotive-engineer/: locomotive_engineer.py
python/making-the-grade/: loops.py
python/mecha-munch-management/: dict_methods.py
python/meltdown-mitigation/: conditionals.py
python/perfect-numbers/: perfect_numbers.py
python/plane-tickets/: generators.py
python/raindrops/: raindrops.py
python/tisbury-treasure-hunt/: tuples.py  tuples_test.py
python/triangle/: triangle.py
(+180 files in other folders)
